crates/burn-cube/tests/error/range.rs
use burn_cube::prelude::*;

#[cube]
fn range() {
    0..10;
}

fn main() {}
