crates/burn-cube/tests/error/range.stderr
error: Range is not supported, use [range](cubecl::prelude::range) instead.
 --> tests/error/range.rs:5:5
  |
5 |     0..10;
  |     ^^^^^
